# diy-x86os

./: .gitignore  README.md
code/: execv_test  execv_test.c  fork_test.c  forktest  hello  hello.c  print  print.c  test  test.c  目录.txt
code/c02.02/: CMakeLists.txt
code/c02.02/script/: img-write-win.bat
code/c02.04/: CMakeLists.txt
code/c02.04/script/: img-write-osx.sh
code/c02.05/: CMakeLists.txt
code/c03.02/script/: img-write-osx.sh
code/c03.03/: CMakeLists.txt
code/c03.03/script/: img-write-win.bat
code/c03.03/source/loader/: loader_16.c  start.asm
code/c03.04/script/: img-write-win.bat
code/c03.05/script/: img-write-linux.sh  img-write-win.bat  qemu-debug-linux.sh
code/c03.06/script/: img-write-linux.sh  img-write-osx.sh
code/c03.07/: CMakeLists.txt
code/c03.07/script/: img-write-win.bat
code/c04.01/script/: img-write-linux.sh
code/c04.02/script/: img-write-linux.sh
code/c04.03/script/: img-write-linux.sh  img-write-osx.sh  img-write-win.bat
code/c04.04/script/: img-write-win.bat
code/c04.05/script/: img-write-linux.sh
code/c04.07/: CMakeLists.txt
code/c04.07/script/: img-write-win.bat  qemu-debug-linux.sh
code/c05.03/script/: qemu-debug-win.bat
code/c05.06/script/: qemu-debug-osx.sh  qemu-debug-win.bat
code/c05.07/script/: qemu-debug-osx.sh
code/c05.09/script/: img-write-osx.sh
code/c05.10/script/: qemu-debug-osx.sh  qemu-debug-win.bat
code/c05.11/script/: qemu-debug-win.bat
code/c05.13/: CMakeLists.txt
code/c05.13/script/: img-write-win.bat
code/c06.02/script/: qemu-debug-linux.sh
code/c06.05/script/: qemu-debug-win.bat
code/c08.01/script/: img-write-linux.sh  img-write-osx.sh
code/c08.05/script/: img-write-win.bat  qemu-debug-win.bat
code/c10.02/script/: qemu-debug-osx.sh
code/c10.06/script/: img-write-osx.sh
code/c10.10/: CMakeLists.txt
code/c10.10/script/: qemu-debug-osx.sh  qemu-debug-win.bat
code/c11.04/source/kernel/: CMakeLists.txt
code/c11.04/source/kernel/core/: memory.c  task.c
code/c11.04/source/kernel/include/core/: memory.h  task.h
code/c11.04/source/kernel/ipc/: bfifo.c
code/c12.07/script/: qemu-debug-osx.sh
code/c12.09/: CMakeLists.txt  hello.c
code/c12.15的副本/: CMakeLists.txt
code/c12.15的副本/source/kernel/core/: memory.c
code/c12.15的副本/source/kernel/include/core/: memory.h  task.h
code/c12.15的副本/source/kernel/include/fs/: file.h
code/c12.15的副本/source/kernel/tools/: klib.c
code/c13.01/: CMakeLists.txt
code/c13.01/source/applib/: CMakeLists.txt  lib_syscall.c  lib_syscall.h
code/c13.01/source/kernel/: CMakeLists.txt
code/c13.01/source/kernel/core/: memory.c  task.c
code/c13.01/source/kernel/include/core/: task.h
code/c13.01/source/kernel/include/fs/: file.h
code/c13.01/source/kernel/init/: start.S
code/c13.10/script/: qemu-debug-win.bat
code/c14.02/script/: img-write-linux.sh
code/c14.07/: CMakeLists.txt
code/c14.10/: CMakeLists.txt
code/c14.10/script/: img-write-osx.sh
code/c14.10/source/boot/: CMakeLists.txt  boot.h
code/c14.10/source/kernel/: CMakeLists.txt  kernel.lds
code/c14.10/source/kernel/core/: memory.c  syscall.c  task.c
code/c14.10/source/kernel/dev/: kbd.c
code/c14.10/source/kernel/fs/: fpath.c  fs.c
code/c14.10/source/kernel/include/: os_cfg.h
code/c14.10/source/kernel/include/core/: task.h
code/c14.10/source/kernel/include/cpu/: cpu.h
code/c14.10/source/kernel/include/dev/: console.h  tty.h
code/c14.10/source/kernel/include/fs/: fpath.h  fs.h
code/c14.10/source/kernel/init/: exception.S  init.c  init_task.c
code/c14.10/source/kernel/tools/: klib.c  list.c
code/c14.20_fs/: CMakeLists.txt
code/c14.20_fs/script/: img-write-osx.sh  img-write-win.bat  qemu-debug-osx.sh  qemu-debug-win.bat
code/c15.01/: CMakeLists.txt
code/c15.02/: CMakeLists.txt
code/c15.02/script/: img-write-linux.sh  img-write-osx.sh
code/c15.10/source/shell/: CMakeLists.txt
code/c15.20/: CMakeLists.txt
code/c15.20/script/: img-write-osx.sh  img-write-win.bat  qemu-debug-win.bat
code/c16.01/: CMakeLists.txt
code/c16.11/script/: qemu-debug-osx.sh
code/c17.09/script/: img-write-linux.sh
code/c19.01/script/: qemu-debug-osx.sh
code/c19.02/script/: img-write-linux.sh
code/c20.00.00/applib/: .cproject  .project
code/c20.00.00/boot/: .cproject  .project  boot.ld
code/c20.00.00/cat/: .cproject  .project
code/c20.00.00/counter/: .cproject  app.ld
code/c20.00.00/cshell/: .cproject  .project
code/c20.00.00/image/: mac_debug  win_debug.bat
code/c20.00.00/kernel/: .cproject  kernel.ld
code/c20.00.00/loader/: .cproject  loader.ld
code/c20.00.00/shell/: .cproject  .project  app.ld
code/c20.00.00/snake/: .cproject  .project  app.ld
code/c20.01/script/: img-write-osx.sh  qemu-debug-win.bat
code/c20.10/script/: img-write-win.bat
code/c20.15/script/: img-write-linux.sh  img-write-osx.sh  img-write-win.bat
code/c20.16/: CMakeLists.txt
code/c20.19/: CMakeLists.txt
code/c21.01/: CMakeLists.txt
code/c22.02/: CMakeLists.txt
code/project/: CMakeLists.txt
code/待整理/c12.07/source/loader/: CMakeLists.txt
code/待整理/c15.01/: CMakeLists.txt
code/待整理/c15.01/source/applib/:  crt_start.c  lib_syscall.c
code/待整理/c15.01/source/kernel/core/: task.c
code/待整理/c15.01/source/kernel/include/cpu/: irq.h
diy-200lines-os/: 目录.md
diy-200lines-os/b00.01/: Makefile  os_elf.txt
diy-200lines-os/b00.02/: Makefile  os_elf.txt
diy-200lines-os/b00.03/: Makefile  os_elf.txt
diy-200lines-os/b00.04/: os_elf.txt
diy-200lines-os/b00.05/: os_elf.txt
diy-200lines-os/b00.06/: os_elf.txt
diy-200lines-os/b00.07/: Makefile  os_elf.txt
diy-200lines-os/b00.08/: os_elf.txt
diy-200lines-os/b00.09/: os_elf.txt
diy-200lines-os/b00.10/: os_elf.txt
image/: .gitignore  check_boot.bat  img-write-win.bat  kernel.elf  loop  qemu-debug-osx.sh
image/mp/: init
image/备份/: img-write-win.bat
newlib-master/: .appveyor.yml
start/c00.00/: CMakeLists.txt
start/curr/: CMakeLists.txt
start/develop/: CMakeLists.txt
start/test/: CMakeLists.txt
课件/: c02.01 开发工具介绍.eddx  c02.02 安装与配置开发工具.eddx  c03.01 计算机启动流程简介.eddx
(+1792 files in other folders)
